<resources>
    <string name="app_name">My App Portfolio</string>

    <!-- Title of the app [CHAR LIMIT = NONE]-->
    <string name="app_title">My Nanodegree Apps!</string>

    <!-- The app portfolio detail [CHAR LIMIT = NONE] -->
    <string name="popular_movie">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitos">GO UBIQUITOS</string>
    <string name="capstone">CAPSTONE</string>

    <!-- The toast message displayed when button is clicked [CHAR LIMTI = NONE] -->
    <string name="button_click_message">This button will launch my %1$s app!</string>

</resources>
